#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([bdm], [0.1], [husixu1 . at . hotmail.com])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([bdm.template])

# Checks for programs.
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

AC_CONFIG_FILES([
    Makefile
])
AC_OUTPUT
